# llm-council-beta

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  test.py
backend/: audit_log.py  council.py  file_extract.py  main.py  prompts.py  search.py  settings.py
backend/providers/: azure.py  bedrock.py
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: AuditLog.jsx  ChatInterface.css  ChatInterface.jsx  CouncilGrid.jsx  Settings.jsx  Stage1.css  Stage1.jsx
frontend/src/components/settings/: CouncilConfig.jsx  PromptSettings.jsx  ProviderSettings.jsx
